  references from the duplicated items to the new target item. When that's done, the 
  selected duplicated items are removed from the database completely. The merge dialog 
  has been improved a bit as well.
- Added componists module and added a componists field to the music album module.
- Added moviemeter.nl online search (Dutch movie site).

[Changed]
- Updated HSQL DB to version 2.7.1. JSoup updated to 1.15.4. Gson (from Google) updated to 
  version 2.10.1. Apache xmlgraphics Batik updated to 1.16. Apache PDFBox updated to 
  2.0.27. Apache Tika upgraded to 2.7.0. Log4j updated to 2.20. jAudiotagger updated to 
  3.0.1. ImageIO updated to 3.9.4. Jetty updated to 11.0.14. Jakarta Faces updated to 
  4.0.1. Jakarta Platform updated to 10.0.0. SLF4J API Module updated 2.0.6. Jakarta 
  Servlet updated to 6.0. 
- Online service pack 1.7: reimplemented online service for The Movie Database; fixed 
  issues present in previous versions where actors and such were no longer retrieved and 
  added additional fields to be retrieved such as: rating, countries and languages.
- Switched on key field settings in everyone's configuration. This will allow for the 
  uniqueness check to work; when saving an item, Data Crow will check whether the 
  item already exists. It does this by checking the field settings; it will check 
  the combination of values for all fields marked as "key". If an item already exists
  with the exact same values for these key fields Data Crow will prevent you from 
  saving the item. Since this was incorrectly set in the base configuration of Data 
  Crow it will now be adjusted (just once) for everyone; every field that is currently
  marked as 'required' will also gain the 'key' setting (see Settings > General Field
  Settings).
- Discogs.com service now also sets the composer for tracks & albums.

[Fixed]
- Discogs.com service now handles sub tracks correctly.
- Corrected all incorrect base settings, for new installation.