@@ -1,3 +1,5 @@
+lblDatabaseLanguage=Taal van de database
+tpDatabaseLanguage=De taal van de database bepaalt hoe de items worden gesorteerd
 msgSelectedSourceItemsForMerge=De onderstaande items zijn geselecteerd om omgezet te worden naar het te kiezen doel item. Nadat de items zijn omgezet worden ze verwijderd en verwijzingen naar deze items worden omgezet naar het doel item.
 lblSelectedItems=Geselecteerde Items
 sysMusicalbumFieldComposers=Componisten
